prover-ray/zkcdriver/testdata/synced/invalid/const_05.zkc
//error:3:14-15:expected type u8
const x:u16 = 1028
const y:u8 = x
